<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    android:padding="30dp">

    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/label_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_expense"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/expense_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expense"
        android:textSize="18sp"
        android:background="@drawable/input"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/sky_blue"/>
    <TextView
        android:id="@+id/label_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_sum"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/sum_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sum"
        android:textSize="18sp"
        android:background="@drawable/input"
        android:padding="10dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/sky_blue"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/cream"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/check_expenses"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/sky_blue"
        android:background="@drawable/button_cta"/>
</LinearLayout>