<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:padding="30dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/welcome"
            android:textColor="@color/cream"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/input"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            android:textColorHint="@color/sky_blue"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edittext"
            android:textColorHint="@color/sky_blue"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_cta"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/sky_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

        <Button
            android:id="@+id/registration_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/cream"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>